--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <p>Este es un ejemplo de párrafo. Todo lo que esté en la etiqueta <strong>body</strong> aparecerá en la página.</p>
+    <img src="picture.jpg" alt="Image description">
 </body>
 <footer></footer>
 </html>
