--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 <body>
     <p>Este es un ejemplo de párrafo. Todo lo que esté en la etiqueta <strong>body</strong> aparecerá en la página.</p>
     <img src="picture.jpg" alt="Image description">
+    <footer>
+         <p>Company: My Company</p>
+         <p><a href="mailto:fake@example.com">fake@example.com</a></p>
+         </footer>
+        
 </body>
 <footer></footer>
 </html>
