Added content to the website

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+    <h1>Bienvenido a nuestra página web</h1> 
     <p>Este es un ejemplo de párrafo. Todo lo que esté en la etiqueta <strong>body</strong> aparecerá en la página.</p>
+    <p>Aquí hay más contenido añadido a la página.</p> 
     <img src="picture.jpg" alt="Image description">
     <footer>
-         <p>Company: My Company</p>
-         <p><a href="mailto:fake@example.com">fake@example.com</a></p>
-         </footer>
-        
+        <p>Company: My Company</p>
+        <p><a href="mailto:fake@example.com">fake@example.com</a></p>
+    </footer>
 </body>
+
 <footer></footer>
 </html>
