Updated body section on main

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <p>Este es un ejemplo de párrafo. Todo lo que esté en la etiqueta <strong>body</strong> aparecerá en la página.</p>
+    <p>hola</p>
     <img src="picture.jpg" alt="Image description">
     <footer>
          <p>Company: My Company</p>
